# education4all

./: .gitignore  .pylintrc  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
blog/: urls.py
blog/admin/: __init__.py
blog/migrations/: 0001_initial.py
blog/models/: __init__.py  models_factory.py  posts.py
blog/views/: about_us.py  contact.py  posts.py  views_factory.py
education4all/: Procfile  manage.py  settings.py
education4all/blog/: urls.py
education4all/blog/admin/: __init__.py  posts_admin.py
education4all/blog/migrations/: 0002_postmodel_section.py
education4all/blog/models/: __init__.py  posts.py
education4all/blog/templatetags/: markdown_extras.py
education4all/blog/views/: __init__.py  posts.py  views_factory.py
education4all/education4all/: asgi.py  settings.py  urls.py  wsgi.py
education4all/templates/: base.html  index.html  post_detail.html  sidebar.html
templates/: about_us.html  base.html  contact.html  sections.html  sidebar.html
